deploy/attacher.yaml
---
kind: DaemonSet
apiVersion: apps/v1
metadata:
  name: csi-attacher-sdafs
  namespace: kube-system
spec:
  selector:
    matchLabels:
      app: csi-sdafs
  template:
    metadata:
      labels:
        app: csi-sdafs
    spec:
      serviceAccount: csi-attacher-sdafs-sa
      tolerations:
        - key: node-role.kubernetes.io/master
          operator: "Exists"
      containers:
        - name: csi-attacher
          image: registry.k8s.io/sig-storage/csi-attacher:v4.9.0
          args:
            - "--v=4"
            - "--csi-address=$(ADDRESS)"
            - "--leader-election"
          imagePullPolicy: "IfNotPresent"
          volumeMounts:
            - name: socket-dir
              mountPath: /var/lib/kubelet/plugins/csi.sda.nbis.se
        - name: csi-provisioner
          image: registry.k8s.io/sig-storage/csi-provisioner:v5.3.0
          args:
            - "--csi-address=$(ADDRESS)"
            - "--v=4"
            - "--leader-election"
          imagePullPolicy: "IfNotPresent"
          volumeMounts:
            - name: socket-dir
              mountPath: /var/lib/kubelet/plugins/csi.sda.nbis.se
      volumes:
        - name: socket-dir
          hostPath:
            path: /var/lib/kubelet/plugins/csi.sda.nbis.se
            type: DirectoryOrCreate
